# comfyui-replicate-node

./: .gitignore  INSTALLATION.md  INSTALL_QUICKSTART.md  PROJECT_STRUCTURE.md  README.md  __init__.py  default_models_config.json  install.py  pyproject.toml  requirements.txt
core/: __init__.py  nodes.py  replicate_client.py  utils.py
docs/: CODE_REVIEW.md  MODEL_COMPARISON_REPORT.md  PRESET_MODELS_GUIDE.md  QUICK_START.md  README.md  TEST_REPORT.md  model_capabilities_report.json
examples/: example_concurrent_generation.py  example_workflow.json
tests/: __init__.py  search_nano_banana.py  test_connection.py  test_full_workflow.py  test_model_capabilities.py  test_prediction.py  test_preset_models.py  test_presets_simple.py  verify_default_models.py
